# a2a-hands-on

./: .gitignore  CLAUDE.md  README.md  a2a-handson-requirements.md  docker-compose.yml
.github/workflows/: deploy-agents.yml  deploy-ui.yml
agents/: README.md
agents/python/: Dockerfile.encourager  Dockerfile.rephraser  Dockerfile.summarizer  Dockerfile.translator  cloudbuild.encourager.yaml  cloudbuild.rephraser.yaml  cloudbuild.summarizer.yaml  cloudbuild.translator.yaml  pyproject.toml  requirements.txt
agents/python/src/: __init__.py
agents/python/src/common/: __init__.py  a2a_handler.py  llm.py  models.py
agents/python/src/encourager/: __init__.py  config.py  main.py
agents/python/src/rephraser/: __init__.py  config.py  main.py
agents/python/src/summarizer/: __init__.py  config.py  main.py
agents/python/src/translator/: __init__.py  config.py  main.py
agents/typescript/: Dockerfile.commit  Dockerfile.documenter  Dockerfile.namer  Dockerfile.reviewer  cloudbuild.commit.yaml  cloudbuild.documenter.yaml  cloudbuild.namer.yaml  cloudbuild.reviewer.yaml  package.json
agents/typescript/src/commit/: config.ts  (+1 more)
scripts/: deploy-agents.sh  test-agents.sh
ui/: .env.example  package-lock.json  package.json  tailwind.config.js  vercel.json
ui/app/: layout.tsx  page.tsx
ui/app/agents/: page.tsx
ui/app/learn/: page.tsx
ui/app/playground/: page.tsx
ui/components/: agent-card.tsx  agent-tester.tsx  api-key-dialog.tsx  code-editor.tsx  header.tsx  response-viewer.tsx
ui/contexts/: app-context.tsx
ui/lib/: a2a-client.ts  playground-executor.ts
(+10 files in other folders)
