[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-agents-python"
version = "1.0.0"
description = "A2A Handson Python Agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "openai>=1.12.0",
    "google-generativeai>=0.4.0",
    "pydantic>=2.6.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
